src/test/ui/issues/issue-32655.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: cannot find attribute macro `derive_Clone` in this scope
=======
error: cannot find attribute `derive_Clone` in this scope
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/issue-32655.rs:3:11
   |
LL |         #[derive_Clone]
   |           ^^^^^^^^^^^^
...
LL | foo!();
   | ------- in this macro invocation

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: cannot find attribute macro `derive_Clone` in this scope
=======
error: cannot find attribute `derive_Clone` in this scope
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/issue-32655.rs:15:7
   |
LL |     #[derive_Clone]
   |       ^^^^^^^^^^^^

error: aborting due to 2 previous errors

